# The-Hypatia-Protocol

./: .gitattributes  .gitignore  .roomodes  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FILE-STRUCTURE.md  LICENSE  Nathaniel-protocol-case-study.md  POCKET-HQ.md  README.md  SECURITY.md  hypatia.config.yaml  pyproject.toml
.clinerules/: 01-identity.md  02-voice.md  03-anti-patterns.md  04-session-gates.md  05-tools.md  06-cognitive.md  07-intelligence-layer.md  08-save-command.md  09-security.md  10-skills-loading.md  11-decision-routes.md
.github/workflows/: validate.yml
.roo/rules-hypatia/: 01-identity.md  03-anti-patterns.md  05-tools.md  08-save-command.md  09-security.md  10-skills-loading.md  11-decision-routes.md
.steering-files/steering/: Nathaniel.md  tool-inventory.md
docs/: Hypatia Build Plan.md  growth-spec-script-offload.md  hypatia-build-plan-addendum.md  open-questions.md  phase-1.5-kernel-redistribution-design.md  port-inventory.md  vault-librarian-reference.md
frontend/: README.md
frontend/src/: index.html  main.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: commands.rs  goose_client.rs  main.rs
goose-config/: README.md  config.yaml  goosehints.md  regen-system-prompt.sh
hypatia-kb/: CRITICAL-FILE-PROTECTION.md  CUSTOMIZATION.md  Hypatia-Protocol.md  QUICKSTART.md  README.md  customization-protocol.md  development-protocol.md  executive-communication-protocol.md  lexicon.md  maintenance-protocol.md  memory-protocol.md  planning-protocol.md  proactive-offering-protocol.md  problem-solving-protocol.md  prompt-enhancement-protocol.md  research-protocol.md  security-protocol.md  summarization-protocol.md  writing-protocol.md
hypatia-kb/Benchmarks/: README.md  behavioral-benchmark-2026-03-21.md  benchmark-candidates.md  benchmark-metrics.json  ecosystem-benchmark-2026-03-21.md  img-gate-stress-test.md  run-benchmark.py  save-protocol-benchmark.md  security-benchmark-2026-03-22.md
hypatia-kb/Intelligence/: README.md  cross-references.json  intelligence-operations.md  knowledge-index.json  knowledge.json  learning-loop.md  patterns-index.json  patterns.json  reasoning-index.json  reasoning.json  synonym-map.json
hypatia-kb/Memory/: README.md  memory-index.json  memory.json  session-index.json
hypatia-kb/protocols/: CRITICAL-FILE-PROTECTION.md  README.md  assistant-ingest.md  assistant-plan.md  assistant-proactive.md  assistant-problem-solve.md  librarian-customize.md  librarian-note-schemas.md  librarian-role.md  librarian-tooling.md  librarian-vault-structure.md  librarian-writing-rules.md  researcher-investigate.md  researcher-prompt-enhance.md  security.md  writer-draft.md  writer-executive.md
inbox/: SCHEMA.md
kernel/: 01-identity.md  02-voice.md  03-critical-gates.md  04-routing.md
mcp-servers/protocols/: Cargo.toml  README.md
mcp-servers/protocols/src/: main.rs
scripts/: check-keyword-drift.py  export-intelligence-to-markdown.py  full-maintenance.sh  hypatia-git-commit.py  normalize-schemas.py  pre-commit-kb-validate.sh  python-maintenance.sh  reseed.py  save-session.py  secure-fetch.py  session-cache.py  setup.sh  validate-schemas.py
tests/: test_cascade_correction.py  test_columbo_oob.py  test_edge_cases.py  test_keyword_drift.py  test_maintenance.py  test_protocols_mcp.py  test_removal_cascade.py  test_save_oob.py  test_save_session.py  test_schema_validation.py  test_session_cache.py
workspace/: README.md
(+34 files in other folders)
