[package]
name = "hypatia-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hypatia custom Tauri frontend (Phase 1.5)"

[lib]
name = "hypatia_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hypatia-frontend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
